<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".ConceptDetailActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/preferred_term"
            android:textColor="@android:color/darker_gray" />

        <TextView
            android:id="@+id/preferred_term"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="24sp"
            tools:text="Preferred Term" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fully_specified_name"
                android:textColor="@android:color/darker_gray" />

            <TextView
                android:id="@+id/fully_specified_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                tools:text="fully specified name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/concept_id"
                android:textColor="@android:color/darker_gray" />

            <TextView
                android:id="@+id/concept_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                tools:text="123456789" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/active"
                android:textColor="@android:color/darker_gray" />

            <TextView
                android:id="@+id/active"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                tools:text="true" />
        </GridLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:text="@string/descriptions"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:text="@string/description_id_term"
            android:textColor="@android:color/darker_gray" />

        <GridLayout
            android:id="@+id/descriptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:padding="8dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:text="@string/child_concepts"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:text="@string/concept_id_term_clickable"
            android:textColor="@android:color/darker_gray" />

        <GridLayout
            android:id="@+id/children"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:padding="8dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:text="@string/parent_concepts"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:text="@string/concept_id_term_clickable"
            android:textColor="@android:color/darker_gray" />

        <GridLayout
            android:id="@+id/parents"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:padding="8dp" />
    </LinearLayout>
</ScrollView>